# transaction-example

./: .chalkignore  .gitignore  CLAUDE.md  chalk.yaml  chalk_test.go  chalkcompute_agent_demo.py  chalkcompute_vllm_server.py  go.mod  go.sum  just_call_it.py  pyproject.toml  queries.ipynb  requirements.txt
cmp/: bulk_investigate.py  chalk_client_chunked.py  chalk_client_generator.py  chalkcompute_agent_demo_ui.py  chalkcompute_vllm_server.py  demo_stream.py  deploy_model.py  gpus.py  investigate_refund.py  investigate_refund_streaming.py  investigator.py  investigator_streaming.py  sandbox_example.py  train_fraud_model.py
notebooks/: models.ipynb  notebook_development.ipynb  offline_queries.ipynb
src/: groq.py  model_registry.py  models.py  neptune.py  neptune_stub.py  offline_queries.ipynb  offline_query.py  payments.chalk.sql  prompts.py  resolvers.py  transaction_search_result.py  transactions.chalk.sql  users.chalk.sql  vector_database.py
src/emailage/: client.py
src/experian/: __init__.py
tests/: test_denylisted.py
