[project]
name = "demos"
version = "0.1.0"
description = "Chalk feature engineering demos"
requires-python = ">=3.12"
dependencies = [
    "chalkpy[runtime,postgresql]>=2.130.2",
    "scikit-learn==1.6.1",
    "xgboost==3.1.3",
    "matplotlib==3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
